--- a/public/style.css
+++ b/public/style.css
@@ -77,3 +77,48 @@ nav {
     color: white;
     border-radius: 10px;
 }
+
+.extra-top-padding {
+    padding-top: 30px;
+
+}
+
+.nav-logo {
+    padding-top: 10px;
+}
+
+.entry-li-style {
+    text-decoration: none;
+    list-style:none;
+}
+
+.entry-style {
+    background-color: #dfeff3;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.entry-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.entry-info {
+    width:200px;
+}
+
+.entry-activity-list {
+    padding:0px;
+}
+
+.entry-activity-list-li {
+    display:inline;
+    padding-left: 5px;
+}
