made css better for adding and editing entries

--- a/public/style.css
+++ b/public/style.css
@@ -140,6 +140,7 @@ nav {
 .inputHolder {
     font-family: interFont;
     font-size: 14px;
+    margin: 25px;
 }
 
 .interFont {
@@ -156,7 +157,7 @@ nav {
 }
 
 .p-label-style {
-    margin: 5px;
+    margin:  5px 0px;
 }
 
 .addActivity-style {
@@ -219,3 +220,108 @@ table {
 .text-center {
     text-align: center;
 }
+
+#checkinLabel {
+    margin: 20px 25px;
+}
+
+.input-style {
+    padding: 5px;
+    margin: 0 5px;
+}
+
+.secondary-btn {
+    background-color: #25995C;
+    margin: 10px;
+    border: none;
+    padding: 10px 20px;
+    font-size: 12px;
+    font-family: interFont;
+    color: white;
+    border-radius: 10px;
+}
+
+
+/* Hide radio */
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* Image style */
+  [type=radio] + img {
+    cursor: pointer;
+  }
+  
+  /* Checked style */
+  [type=radio]:checked + img {
+    outline: 2px solid #f00;
+  }
+
+  .container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #25995C;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 7px;
+    top: 2px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
