--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,7 @@
 .chart-container{
     width: 40rem;
     padding: auto;
+    margin: auto;
 }
 
 .wrapper {
@@ -46,7 +47,7 @@ nav {
 .nav-btn{
     margin: 10px;
     border: none;
-    background-color: #D3D7DC;
+    background-color: transparent;
     padding: 10px;
     font-size: 15px;
     font-family: interFont;
@@ -55,8 +56,8 @@ nav {
 }
 
 .nav-btn:hover {
-    transition-delay:1ms;
-    background-color: lightgray;
+    transition-delay: 3ms;
+    background-color: #cfd6df;
 }
 
 .nav-style {
@@ -325,3 +326,52 @@ table {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
+
+  .mood-mean-style {
+    border-style: solid;
+    border-radius: 100%;
+    font-size:large;
+    padding: 20px 18px;
+    border-width: 5px;
+    margin-right: 15px;
+    
+  }
+
+.stats-overview {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.awesomeColor {
+    border-color:#25995C;
+    color:#25995C;
+}
+.goodColor {
+    border-color: #92eb34;
+    color: #92eb34;
+
+}
+
+.okayColor {
+    border-color: #e8eb34;
+    color: #e8eb34;
+
+}
+
+.sadColor {
+    border-color: #eb9c34;
+    color: #eb9c34;
+
+}
+
+.horribleColor {
+    border-color: #eb3434;
+    color: #eb3434;
+}
+
+#averageMood {
+    text-align: right;
+    margin-top: 10px;
+
+}
